--- a/templates/index.html
+++ b/templates/index.html
@@ -259,20 +259,27 @@
   </body>
 </html> -->
 
-<!-- =============================================================================================================== -->
+<!-- ============================================ LAST WORKING CODE=================================================================== -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Classification</title>
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="customCSS.css" />
+
     <style>
       body {
         font-family: "Arial", sans-serif;
-        margin: 20px;
-        text-align: center;
       }
 
       h1 {
@@ -333,34 +340,192 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1>Retinal OCT Image Classification</h1>
-      <div class="upload-form">
-        <form
-          id="imageForm"
-          action="/predict"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <label for="imageInput">Choose an image</label>
-          <input
-            type="file"
-            id="imageInput"
-            name="image"
-            accept="image/*"
-            onchange="updateImageName()"
-          />
-          <div id="imageName"></div>
-          <button type="button" onclick="predict()">Predict</button>
+    <main>
+      <div class="container mt-5">
+        <h1 class="text-center">Retinal OCT Image Classification</h1>
+        <div class="upload-form text-center">
+          <form
+            id="imageForm"
+            action="/predict"
+            method="post"
+            enctype="multipart/form-data"
+          >
+            <label for="imageInput">Choose an image</label>
+            <input
+              type="file"
+              id="imageInput"
+              name="image"
+              accept="image/*"
+              onchange="updateImageName()"
+            />
+            <div id="imageName"></div>
+            <button type="button" onclick="predict()">Predict</button>
 
-          <!-- Result display section -->
-          <div id="predictionResult">
-            <!-- <img id="uploadedImage" /> -->
-            <p id="predictionText"></p>
-          </div>
-        </form>
+            
+            <div id="predictionResult">
+              <p id="predictionText"></p>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
+
+    <br />
+
+    <footer>
+      <section class="bg-dark">
+        <div class="container my-5">
+          <div class="row gx-5 gy-5">
+
+            <div class="col-lg-4">
+              
+              <h2 class="fw-bold text-white">About Me</h2>
+              <p class="text-white">
+                I am a 4th year Computer Science (CS) student at BRAC
+                University. I am a programmer and graphics designer. I am also a
+                Junior Full Stack MERN Web Developer.
+              </p>
+            </div>
+
+            
+
+            <div class="col-lg-4">
+              <h1 class="text-white">Links</h1>
+              <ul class="p-0">
+                
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <a href="#home">
+                      <i class="fas fa-arrow-right text-white"></i>
+                    </a>
+                  </div>
+                  <div class="text-white ps-3">
+                    <a href="#home" class="flink text-white">Home</a>
+                  </div>
+                </li>
+
+                
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <a href="#aboutme">
+                      <i class="fas fa-arrow-right text-white"></i>
+                    </a>
+                  </div>
+                  <div class="text-white ps-3">
+                    <a href="#aboutme" class="flink text-white">About Me</a>
+                  </div>
+                </li>
+
+                
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <a href="#ex">
+                      <i class="fas fa-arrow-right text-white"></i>
+                    </a>
+                  </div>
+                  <div class="text-white ps-3">
+                    <a href="#ex" class="flink text-white">Experience</a>
+                  </div>
+                </li>
+
+               
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <a href="#project">
+                      <i class="fas fa-arrow-right text-white"></i>
+                    </a>
+                  </div>
+                  <div class="text-white ps-3">
+                    <a href="#project" class="flink text-white">Projects</a>
+                  </div>
+                </li>
+
+         
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <a href="#skill">
+                      <i class="fas fa-arrow-right text-white"></i>
+                    </a>
+                  </div>
+                  <div class="text-white ps-3">
+                    <a href="#skill" class="flink text-white">Skills</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-lg-4">
+              <h1 class="text-white">Contacts and Info</h1>
+              <ul class="p-0">
+
+                
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <i class="fas fa-phone-alt text-white"></i>
+                  </div>
+                  <div class="text-white ps-3">+8801521561754</div>
+                </li>
+
+
+                <li class="py-2 d-flex">
+                  <div>
+                    <i class="fas fa-envelope text-white"></i>
+                  </div>
+                  <div class="text-white ps-3">anontoshuvo99@gmail.com</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container mt-5 pb-5">
+          <ul class="d-flex justify-content-center align-items-center m-0 p-0">
+            <li class="py-2 pe-4 d-flex">
+              <a target="_blank" href="https://github.com/shuvo-99">
+                <i class="fab fa-github-square text-white fa-2x"></i>
+              </a>
+            </li>
+            <li class="py-2 pe-4 d-flex">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/md-anonto-shuvo/"
+              >
+                <i class="fab fa-linkedin text-white fa-2x"></i>
+              </a>
+            </li>
+            <li class="py-2 pe-4 d-flex">
+              <a target="_blank" href="https://www.behance.net/mdanontoshuvo">
+                <i class="fab fa-behance-square text-white fa-2x"></i>
+              </a>
+            </li>
+            <li class="py-2 pe-4 d-flex">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/AnontoShuvo.99/"
+              >
+                <i class="fab fa-facebook-square text-white fa-2x"></i>
+              </a>
+            </li>
+            <li class="py-2 pe-4 d-flex">
+              <a target="_blank" href="https://twitter.com/AnontoShuvo">
+                <i class="fab fa-twitter-square text-white fa-2x"></i>
+              </a>
+            </li>
+          </ul>
+          <br />
+          <p class="text-white text-center">
+            © Copyright 2023 Md. Anonto Shuvo | All rights Reserved
+          </p>
+        </div>
+      </section>
+    </footer>
 
     <script>
       function updateImageName() {
@@ -408,5 +573,258 @@
         predictionText.innerHTML = "Prediction: " + predictedClass;
       }
     </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html> -->
+
+<!-- =============================================================================================================== -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Classification</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="/templates/customCSS.css" />
+
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+      }
+
+      h1 {
+        color: #333;
+      }
+
+      .upload-form {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #f9f9f9;
+      }
+
+      input[type="file"] {
+        display: none;
+      }
+
+      label {
+        background-color: #3498db;
+        color: #fff;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+        margin-bottom: 20px;
+        display: inline-block;
+      }
+
+      #imageName {
+        margin-bottom: 20px;
+        font-size: 16px;
+      }
+
+      button {
+        background-color: #2ecc71;
+        color: #fff;
+        padding: 10px 20px;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        margin-left: 10px;
+      }
+
+      #predictionResult {
+        display: none;
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+      }
+
+      #imageContainer {
+        flex: 1;
+        margin-right: 20px;
+      }
+
+      #uploadedImage {
+        max-width: 100%;
+      }
+
+      #predictionTextContainer {
+        flex: 1;
+      }
+
+      #predictionText {
+        margin-top: 10px;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="container mt-5">
+        <h1 class="text-center">Retinal OCT Image Classification</h1>
+        <div class="upload-form text-center">
+          <form
+            id="imageForm"
+            action="/predict"
+            method="post"
+            enctype="multipart/form-data"
+          >
+            <label for="imageInput">Choose an image</label>
+            <input
+              type="file"
+              id="imageInput"
+              name="image"
+              accept="image/*"
+              onchange="updateImageName()"
+            />
+            <div id="imageName"></div>
+            <button type="button" onclick="predict()">Predict</button>
+
+            <!-- Result display section -->
+            <!-- <div id="predictionResult"> -->
+            <!-- <img id="uploadedImage" /> -->
+            <!-- <p id="predictionText"></p> -->
+            <!-- </div> -->
+            <div id="predictionResult">
+              <div id="imageContainer">
+                <img id="uploadedImage" />
+              </div>
+              <div id="predictionTextContainer">
+                <p id="predictionText"></p>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+    <br />
+
+    <footer class="text-white">
+      <section class="bg-dark">
+        <div class="container mt-5 mb-2">
+          <div class="row gx-5 gy-5">
+            <!-- About me -->
+
+            <div class="col-lg-8">
+              <h2 class="fw-bold text-center">About Us</h2>
+              <br />
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col">
+                    <p>Md Saif Mokarrom</p>
+                    <p>Id: 20301121</p>
+                  </div>
+                  <div class="col">
+                    <p>Md. Anonto Shuvo</p>
+                    <p>Id: 23141036</p>
+                  </div>
+                  <div class="col">
+                    <p>Nazmul Hasan Oyon</p>
+                    <p>Id: 20101528</p>
+                  </div>
+                  <div class="col">
+                    <p>Rifha Hossain Munaja</p>
+                    <p>Id: 20301466</p>
+                  </div>
+                  <div class="col">
+                    <p>Soumik Roy</p>
+                    <br />
+                    <p>Id: 20101573</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Supervisor Info -->
+
+            <div class="col-lg-4">
+              <h2 class="fw-bold text-white">Supervised by</h2>
+              <br />
+              <h4>Dr. Md. Ashraful Alam</h4>
+              <p>Associate Professor</p>
+              <p>CSE, BRAC University</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Copyright text -->
+
+        <div class="container mt-5 pb-5">
+          <p class="text-white text-center">
+            © Copyright 2024 T2230029 | All rights Reserved
+          </p>
+        </div>
+      </section>
+    </footer>
+
+    <script>
+      function updateImageName() {
+        var inputElement = document.getElementById("imageInput");
+        var imageNameElement = document.getElementById("imageName");
+
+        if (inputElement.files.length > 0) {
+          imageNameElement.innerHTML =
+            "Selected Image: " + inputElement.files[0].name;
+        } else {
+          imageNameElement.innerHTML = "No image selected";
+        }
+      }
+
+      function predict() {
+        var formElement = document.getElementById("imageForm");
+        var formData = new FormData(formElement);
+
+        // Make an AJAX request to handle form submission
+        fetch("/predict", {
+          method: "POST",
+          body: formData,
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            // Handle the response data (you can update the UI as needed)
+            if (data.error) {
+              console.error(data.error);
+            } else {
+              updateImageName(); // Update image name even after prediction
+              updatePredictionResult(data.image_path, data.predicted_class);
+            }
+          })
+          .catch((error) => console.error(error));
+      }
+
+      function updatePredictionResult(imagePath, predictedClass) {
+        var predictionResult = document.getElementById("predictionResult");
+        var uploadedImage = document.getElementById("uploadedImage");
+        var predictionText = document.getElementById("predictionText");
+
+        // Show the image and prediction result
+        predictionResult.style.display = "flex"; // Display as flex container
+        uploadedImage.src = "/images/" + imagePath; // Fetch the image through the /image/ endpoint
+        predictionText.innerHTML = `<div>
+          <p>Prediction: <span class='text-danger'>${predictedClass}</span></p>
+          </div>  `;
+      }
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
